Added print statement